gulp - reload, navigation improvements,respond valid user feedback... and some styles - soon more

--- a/Server/public/js/directives/loginForm.tpl.html
+++ b/Server/public/js/directives/loginForm.tpl.html
@@ -1,4 +1,4 @@
-<div class="card-title blue-text">Login</div>
+<div class="card-title blue-text">Login für Members </div>
     <form id="loginForm" name="loginForm"
           class="userForm"
           ng-submit="sessionCtrl.login(user)">
@@ -36,7 +36,7 @@
               <hr />
               <!--login guest-->
               <div class="row">
-                  <div class="card-title blue-text">für Gäste</div>
+                  <div class="card-title blue-text">Login für Gäste</div>
                   <a href="#/searchRecipe" class="btn white text-accent-1 blue-text waves-effect right">Gast -Login</a>
               </div>
           </div>
