--- a/Server/public/js/directives/searchForm.tpl.html
+++ b/Server/public/js/directives/searchForm.tpl.html
@@ -1,6 +1,6 @@
 <form class="searchForm">
-    <div class="input-field">
-        <input id="recipeSearchInput" type="text"
+    <div class="input-field col">
+        <input id="recipeSearchInput" type="text" class="left-align"
            ng-model="recipeFilter.text"/>
         <label for="recipeSearchInput" class="">Rezepte suchen</label>
         <button class="btn orange right-align" >Finden</button>
