--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -9,7 +9,7 @@
     <!--fancy favicon-->
     <link rel="shortcut icon" href="pictures/fb_16.ico" />
     <link rel="shortcut icon" href="pictures/fb_32.ico" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>-->
     <link rel="stylesheet" href="css/swiper.css"/>
     <link rel="stylesheet" href="css/materialize.css"/>
     <link rel="stylesheet" href="css/fb-styles.css"/>
@@ -37,7 +37,7 @@
     </main>
     <!--Temporary for Message test START-->
     Nur für Test der Meldungen:
-    <a href="#" onclick='window.setMessage("ERROR TEST", 2)'>ERROR</a>
+    <a href="#" onclick='window.setMessage("ERROR TEST", 2)'>ERROR meldung</a>
     <a href="#" onclick='window.setMessage("WARNING TEST", 1)'>WARN</a>
     <a href="#" onclick='window.setMessage("INFO TEST", 0)'>INFO</a>
     <!--Temporary for Message test END-->
