--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,69 +1,23 @@
-  <nav>
-      <div class="nav-wrapper">
-          <a href="/" class="brand-logo left">Fetty Bossy <small>v0.14</small></a>
-          <!--<a href="#"  class="button-collapse"><i class="material-icons">menu</i></a>-->
-          <ul class="header-nav  right" ng-controller="SessionController as sessionCtrl">
-            <li>
-                <a href="#/searchRecipe">Rezepte</a>
-            </li>
-            <li ng-hide="sessionCtrl.getUser()">
-                <a href="#/login">Login</a>
-            </li>
-            <li ng-show="sessionCtrl.getUser()" class="amber">
-                <a href="#/viewUser/{{sessionCtrl.getUser()._id}}">[Hallo {{sessionCtrl.getUser().name}} !]</a>
-            </li>
-            <li ng-show="sessionCtrl.getUser()" >
-                <a href="#/addRecipe" >Rezepte erfassen</a>
-            </li>
-              <li ng-show="sessionCtrl.getUser()" >
-                <a href="#/start" ng-click="sessionCtrl.logout()" >Logout</a>
-            </li>
-          </ul>
-
-      </div>
-  </nav>
-
-<!--
-  <header class="mdl-layout__header">
-        <div class="mdl-layout__drawer-button">
-            <i class="material-icons">menu</i>
-        </div>
-        <div class="mdl-layout__header-row header-nav">
-            <span class="mdl-layout-title">Fetty Bossy DB</span>
-            &lt;!&ndash; Add spacer, to align navigation to the right &ndash;&gt;
-            <div class="mdl-layout-spacer"></div>
-            &lt;!&ndash; Navigation &ndash;&gt;
-            <nav class="mdl-navigation mdl-layout&#45;&#45;large-screen-only" ng-controller="SessionController as sessionCtrl">
-                <a href="#/searchRecipe"> Suche </a>
-                <span ng-hide="sessionCtrl.getUser()">
-                    <a href="#/login">Login</a>
-                </span>
-                <span ng-show="sessionCtrl.getUser()">
-                    <a href="#/viewUser/{{sessionCtrl.getUser()._id}}">[{{sessionCtrl.getUser().name}}]</a>
-                </span>
-                &lt;!&ndash;display gast login&ndash;&gt;
-                <span ng-hide="sessionCtrl.getUser()">
-                    [ Gast ]
-                </span>
-                <span ng-show="sessionCtrl.getUser()">
-                    <a href="" ng-click="sessionCtrl.logout()">Logout</a>
-                </span>
-            </nav>
-        </div>
-    </header>
-    <div class="mdl-layout__drawer">
-        <span class="mdl-layout-title">Fetty Bossy DB</span>
-        <nav class="mdl-navigation">
-            <a  href="#/searchRecipe"> Suche </a>
-             <span ng-hide="sessionCtrl.getUser()">
-                 <a class="mdl-navigation__link" href="#/login"> Login </a>
-             </span>
-            <span class="mdl-navigation" ng-hide="sessionCtrl.getUser()">
-               [ Gast ]
-            </span>
-            <span ng-show="sessionCtrl.getUser()">
-               <a class="mdl-navigation__link" href="#" ng-click="sessionCtrl.logout()">Logout</a>
-            </span>
-        </nav>
-    </div>
--->
+<nav>
+  <div class="nav-wrapper">
+      <a href="/" class="left fb-title">Fetty Bossy <small>v0.17</small></a>
+      <!--<a href="#"  class="button-collapse"><i class="material-icons">menu</i></a>-->
+      <ul class="header-nav  right" ng-controller="SessionController as sessionCtrl">
+        <li>
+            <a href="#/searchRecipe">Alle Rezepte</a>
+        </li>
+        <li ng-hide="sessionCtrl.getUser()">
+            <a href="#/login">Login</a>
+        </li>
+        <li ng-show="sessionCtrl.getUser()" >
+            <a href="#/addRecipe" >Rezepte erfassen</a>
+        </li>
+        <li ng-show="sessionCtrl.getUser()" class="userlogedin">
+           <a href="#/viewUser/{{sessionCtrl.getUser()._id}}">User: {{sessionCtrl.getUser().name}}</a>
+        </li>
+        <li ng-show="sessionCtrl.getUser()" >
+            <a href="#/start" ng-click="sessionCtrl.logout()" >Logout {{sessionCtrl.getUser().name}}</a>
+        </li>
+      </ul>
+  </div>
+</nav>
