fixed unit tests

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="../Server/public/js/lib/angular.js"></script>
     <script type="text/javascript" src="../Server/public/js/lib/angular-animate.js"></script>
     <script type="text/javascript" src="../Server/public/js/lib/angular-route.js"></script>
+    <script type="text/javascript" src="../Server/public/js/lib/angular-toastr.tpls.js"></script>
     <script type="text/javascript" src="lib/angular-mocks.js"></script>
 
     <!--own code - interface not imported because of no need in javascript -->
@@ -32,7 +33,6 @@
     <script type="text/javascript" src="../Server/public/js/controllers/ViewUserController.js"></script>
 
     <script type="text/javascript" src="../Server/public/js/directives/AddeditRecipeRatingDirective.js"></script>
-    <script type="text/javascript" src="../Server/public/js/directives/FeedbackMessageDirective.js"></script>
     <script type="text/javascript" src="../Server/public/js/directives/FileChooserDirective.js"></script>
     <script type="text/javascript" src="../Server/public/js/directives/InitSwiper.js"></script>
     <script type="text/javascript" src="../Server/public/js/directives/ListRecipeRatingsDirective.js"></script>
