fixed stars in rating

--- a/Server/public/js/directives/addeditRecipeRating.tpl.html
+++ b/Server/public/js/directives/addeditRecipeRating.tpl.html
@@ -5,7 +5,7 @@
             <p>in Sternen</p>
             <p class="range-field">
                 <label>1 </label>
-                <input type="range" id="" min="1" max="5" style="max-width: 70%;"  />
+                <input type="range" id="" min="1" max="5" style="max-width: 70%;" ng-model="rating.stars" />
                 <label>5 </label>
             </p>
         </div>
