--- a/Server/public/js/directives/listRecipeRatings.tpl.html
+++ b/Server/public/js/directives/listRecipeRatings.tpl.html
@@ -21,11 +21,11 @@
 
                     {{rating.stars}}
                 <span class="star-rating">
-                 <i class="small material-icons">star</i>
-                 <i class="small material-icons">star</i>
-                 <i class="small material-icons">star</i>
-                 <i class="small material-icons">star</i>
-                 <i class="small material-icons">star</i>
+                 <i class="small material-icons">{{listRecipeRatingsCtrl.starName(rating, 5)}}</i>
+                 <i class="small material-icons">{{listRecipeRatingsCtrl.starName(rating, 4)}}</i>
+                 <i class="small material-icons">{{listRecipeRatingsCtrl.starName(rating, 3)}}</i>
+                 <i class="small material-icons">{{listRecipeRatingsCtrl.starName(rating, 2)}}</i>
+                 <i class="small material-icons">{{listRecipeRatingsCtrl.starName(rating, 1)}}</i>
                 </span>
                 </div>
                 <fb-addedit-recipe-rating
