userService for having different services for user and recipes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -35,12 +35,6 @@
             <!-- will be filled by angular routing/templating -->
         </div>
     </main>
-    <!--Temporary for Message test START-->
-    Nur für Test der Meldungen:
-    <a href="#" onclick='window.setMessage("ERROR TEST", 2)'>ERROR meldung</a>
-    <a href="#" onclick='window.setMessage("WARNING TEST", 1)'>WARN</a>
-    <a href="#" onclick='window.setMessage("INFO TEST", 0)'>INFO</a>
-    <!--Temporary for Message test END-->
 </div>
 
 <!--own code - interface not imported because of no need in javascript -->
@@ -77,6 +71,7 @@
 <script type="text/javascript" src="js/services/MessageService.js"></script>
 <script type="text/javascript" src="js/services/RepositoryService.js"></script>
 <script type="text/javascript" src="js/services/SessionService.js"></script>
+<script type="text/javascript" src="js/services/UserService.js"></script>
 
 </body>
 </html>
