Add/ Edit Recipe: fonts and layout. improved. scaling fonts.

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -9,7 +9,8 @@
     <!--fancy favicon-->
     <link rel="shortcut icon" href="pictures/fb_16.ico" />
     <link rel="shortcut icon" href="pictures/fb_32.ico" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,300" />
     <link rel="stylesheet" href="css/swiper.css"/>
     <link rel="stylesheet" href="css/materialize.css"/>
     <link rel="stylesheet" href="css/fb-styles.css"/>
