--- a/Server/public/js/directives/menu.tpl.html
+++ b/Server/public/js/directives/menu.tpl.html
@@ -1,7 +1,6 @@
 <nav>
   <div class="nav-wrapper">
-      <a href="/" class="left fb-title">Fetty Bossy <small>v0.17</small></a>
-      <!--<a href="#"  class="button-collapse"><i class="material-icons">menu</i></a>-->
+      <a href="/" class="left fb-title"><i class="material-icons small prefix" style="display: inline; padding-right: 1em; height: 25px;">face</i>Fetty Bossy<small>v0.17</small></a>
       <ul class="header-nav  right" ng-controller="SessionController as sessionCtrl">
         <li>
             <a href="#/searchRecipe">Alle Rezepte</a>
