build into one file for client

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -38,6 +38,8 @@
     </main>
 </div>
 
+<script type="text/javascript" src="js/fettybossy.js"></script>
+
 <!--own code - interface not imported because of no need in javascript -->
 <script type="text/javascript" src="js/constants.js"></script>
 <script type="text/javascript" src="js/injects.js"></script>
