fixed change password

--- a/Server/public/js/directives/userDetails.tpl.html
+++ b/Server/public/js/directives/userDetails.tpl.html
@@ -27,7 +27,7 @@
                     <td>Passwort:</td>
                     <td><i class="small material-icons prefix">fingerprint</i></td>
                     <td class="input-field">
-                        <input type="password" class="validate editable" ng-model="user.password"/>
+                        <input type="password" class="validate editable" ng-model="passwordNew"/>
                     </td>
                 </tr>
                 <tr>
