--- a/Server/public/js/directives/searchResultlist.tpl.html
+++ b/Server/public/js/directives/searchResultlist.tpl.html
@@ -23,7 +23,11 @@
                 </h6>
             </td>
             <td>
-                rating: {{recipe.avgRating}}
+                <i class="material-icons">{{starName(recipe.avgRating, 1)}}</i>
+                <i class="material-icons">{{starName(recipe.avgRating, 2)}}</i>
+                <i class="material-icons">{{starName(recipe.avgRating, 3)}}</i>
+                <i class="material-icons">{{starName(recipe.avgRating, 4)}}</i>
+                <i class="material-icons">{{starName(recipe.avgRating, 5)}}</i>
             </td>
             <td>
                 {{recipe.userName}}
@@ -34,7 +38,7 @@
                 Mehr als {{maxRecipes}} Rezepte gefunden
             </td>
             <td colspan="3">
-                <button class="btn orange right-align" ng-click="showMoreRecipes()" >weitere 10 anzeigen</button>
+                <button class="btn orange right-align" ng-click="showMoreRecipes()">weitere 10 anzeigen</button>
             </td>
         </tr>
         <tr ng-show="filteredRecipes.length == 0">
