implemented teaser boxes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -63,6 +63,7 @@
 <script type="text/javascript" src="js/directives/ListRecipeRatingsDirective.js"></script>
 <script type="text/javascript" src="js/directives/LoginFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/MenuDirective.js"></script>
+<script type="text/javascript" src="js/directives/RecipeTeaserDirective.js"></script>
 <script type="text/javascript" src="js/directives/RegisterFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
