i18n, not yet finished

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/lib/angular-animate.js"></script>
     <script type="text/javascript" src="js/lib/angular-route.js"></script>
+    <script type="text/javascript" src="js/lib/angular-translate.js"></script>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/lib/materialize.js"></script>
