--- a/Server/public/js/directives/recipeTeaser.tpl.html
+++ b/Server/public/js/directives/recipeTeaser.tpl.html
@@ -10,7 +10,7 @@
             <p>{{recipe.title}}</p>
         </div>
         <div class="card-action">
-            <a class="btn" href="#/viewRecipe/{{recipe._id}}">zum Rezept</a>
+            <a class="btn" href="#/viewRecipe/{{recipe._id}}" translate="BUTTON_TO_RECIPE">zum Rezept</a>
         </div>
     </div>
 </div>
