--- a/Server/public/js/directives/searchForm.tpl.html
+++ b/Server/public/js/directives/searchForm.tpl.html
@@ -2,7 +2,7 @@
     <div class="input-field col">
         <input id="recipeSearchInput" type="text" class="left-align"
            ng-model="recipeFilter.text"/>
-        <label for="recipeSearchInput" class="">Rezepte suchen</label>
-        <button class="btn orange right-align" >Finden</button>
+        <label for="recipeSearchInput" class="" translate="SEARCH_RECIPES">Rezepte suchen</label>
+        <button class="btn orange right-align" translate="BUTTON_FIND">Finden</button>
     </div>
 </form>
