--- a/Server/public/js/directives/loginForm.tpl.html
+++ b/Server/public/js/directives/loginForm.tpl.html
@@ -1,16 +1,16 @@
-<div class="card-title blue-text">Login für Members</div>
+<div class="card-title blue-text" translate="LOGIN_TITLE">Login für Members</div>
 <form id="loginForm" name="loginForm"
       class="userForm"
       ng-submit="sessionCtrl.login(user)">
     <div class="input-field">
         <input type="text" id="loginName" name="loginName"
                ng-model="user.name" required/>
-        <label for="loginName">Name</label>
+        <label for="loginName" translate="LOGIN_NAME">Name</label>
     </div>
     <div class="input-field">
         <input type="password" id="loginPassword" name="loginPassword"
                ng-model="user.password" required/>
-        <label for="loginPassword">Passwort</label>
+        <label for="loginPassword" translate="LOGIN_PW">Passwort</label>
     </div>
     <div class="card-reveal">
         <div ng-show="loginForm.$submitted || registerForm.loginName.$dirty || sessionCtrl.loginError">
