--- a/Server/public/js/directives/loginForm.tpl.html
+++ b/Server/public/js/directives/loginForm.tpl.html
@@ -30,14 +30,14 @@
         <div class="row">
             <button type="submit"
                     ng-disabled="loginForm.$invalid"
-                    class="btn light-blue white-text waves-effect waves-light right">Login
+                    class="btn light-blue white-text waves-effect waves-light right" translate="MENU_LOGIN">Login
             </button>
         </div>
         <hr/>
         <!--login guest-->
         <div class="row">
-            <div class="card-title blue-text">Login für Gäste</div>
-            <a href="#/searchRecipe" class="btn white text-accent-1 blue-text waves-effect right">Gast -Login</a>
+            <div class="card-title blue-text" translate="LOGIN_GUEST">Login für Gäste</div>
+            <a href="#/searchRecipe" class="btn white text-accent-1 blue-text waves-effect right" translate="BUTTON_LOGON_GUEST">Gast -Login</a>
         </div>
     </div>
 </form>
