--- a/Server/public/js/directives/registerForm.tpl.html
+++ b/Server/public/js/directives/registerForm.tpl.html
@@ -1,4 +1,4 @@
-<div class="card-title amber-text ">Neu Registrieren</div>
+<div class="card-title amber-text " translate="REGISTER_TITLE">Neu Registrieren</div>
 <div ng-hide="sessionCtrl.isLoggedIn()">
     <form id="registerForm" name="registerForm"
           class="userForm"
@@ -7,7 +7,7 @@
         <div class="input-field">
             <input type="text" id="registerName" name="registerName"
                    ng-model="user.name" required/>
-            <label for="registerName">Name</label>
+            <label for="registerName" translate="LOGIN_NAME">Name</label>
             <div ng-show="registerForm.$submitted || registerForm.registerName.$dirty || registerCtrl.registerEror">
                 <div ng-show="registerForm.registerName.$error.required">Ihr Name bitte.</div>
             </div>
@@ -16,7 +16,7 @@
         <div class="input-field">
             <input type="email" id="registerEmail" name="registerEmail"
                    ng-model="user.email" required/>
-            <label for="registerEmail">E-Mail</label>
+            <label for="registerEmail" translate="EMAIL">E-Mail</label>
             <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
                 <span ng-show="registerForm.registerEmail.$error.required">Bitte geben Sie eine E-mail Adresse an.</span>
                 <span ng-show="registerForm.registerEmail.$error.email">Das ist <i>keine</i> gültige E-mail adresse!</span>
@@ -24,7 +24,7 @@
         </div>
 
         <div class="input-field">
-            <label for="registerPassword">Passwort</label>
+            <label for="registerPassword" translate="LOGIN_PW">Passwort</label>
             <input type="password" id="registerPassword" name="registerPassword"
                    ng-model="user.password" required/>
             <div ng-show="registerForm.$submitted || registerForm.registerEmail.$dirty || registerCtrl.registerEror">
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col s12">
                 <button type="submit" class="btn amber darken-2 white-text waves-effect right"
-                        ng-disabled="registerForm.$invalid">Neu Registrieren
+                        ng-disabled="registerForm.$invalid" translate="BUTTON_REGISTER">Neu Registrieren
                 </button>
             </div>
         </div>
