--- a/Server/public/js/directives/loginForm.tpl.html
+++ b/Server/public/js/directives/loginForm.tpl.html
@@ -37,7 +37,7 @@
         <!--login guest-->
         <div class="row">
             <div class="card-title blue-text" translate="LOGIN_GUEST">Login für Gäste</div>
-            <a href="#/searchRecipe" class="btn white text-accent-1 blue-text waves-effect right" translate="BUTTON_LOGON_GUEST">Gast -Login</a>
+            <a href="#/searchRecipe" class="btn green white-text waves-effect right" translate="BUTTON_LOGON_GUEST">Gast -Login</a>
         </div>
     </div>
 </form>
