--- a/Server/public/js/directives/searchForm.tpl.html
+++ b/Server/public/js/directives/searchForm.tpl.html
@@ -1,6 +1,7 @@
 <form class="searchForm">
-    <div class="input-field col">
-        <input id="recipeSearchInput" type="text" class="left-align"
+    <div class="input-field">
+
+        <input id="recipeSearchInput" type="text" class="right-align"
            ng-model="recipeFilter.text"/>
         <label for="recipeSearchInput" class="" translate="SEARCH_RECIPES">Rezepte suchen</label>
         <button class="btn orange right-align" translate="BUTTON_FIND">Finden</button>
