title without version

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Fetty Bossy-DB version 0.23</title>
+    <title>Fetty Bossy</title>
 
     <!--fancy favicon-->
     <link rel="shortcut icon" href="pictures/fb_16.ico" />
