keyboard-accessebility improvements and footer template

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -37,6 +37,7 @@
             <!-- will be filled by angular routing/templating -->
         </div>
     </main>
+    <fb-footer></fb-footer>
 </div>
 
 <script type="text/javascript" src="js/fettybossy.js"></script>
