footer template and some grid adjustments

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="js/lib/angular-animate.js"></script>
     <script type="text/javascript" src="js/lib/angular-route.js"></script>
     <script type="text/javascript" src="js/lib/angular-translate.js"></script>
+    <script type="text/javascript" src="js/lib/angular-translate.js"></script>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="js/lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/lib/materialize.js"></script>
@@ -70,6 +71,7 @@
 <script type="text/javascript" src="js/directives/SearchFormDirective.js"></script>
 <script type="text/javascript" src="js/directives/SearchResultlistDirective.js"></script>
 <script type="text/javascript" src="js/directives/UserDetailsDirective.js"></script>
+<script type="text/javascript" src="js/directives/FooterDirektive.js"></script>
 
 <script type="text/javascript" src="js/filters/MinutesToHoursMinutesFilter.js"></script>
 <script type="text/javascript" src="js/filters/SearchRecipeFilter.js"></script>
