--- a/Server/public/js/directives/searchForm.tpl.html
+++ b/Server/public/js/directives/searchForm.tpl.html
@@ -1,9 +1,8 @@
 <form class="searchForm">
     <div class="input-field">
-
-        <input id="recipeSearchInput" type="text" class="right-align"
+        <input id="recipeSearchInput" type="text" class="left-align"
            ng-model="recipeFilter.text"/>
-        <label for="recipeSearchInput" class="" translate="SEARCH_RECIPES">Rezepte suchen</label>
+        <label for="recipeSearchInput" class="right-aligned" translate="SEARCH_RECIPES">nach Rezepten suchen</label>
         <button class="btn orange right-align" translate="BUTTON_FIND">Finden</button>
     </div>
 </form>
