--- a/Server/public/js/directives/searchResultlist.tpl.html
+++ b/Server/public/js/directives/searchResultlist.tpl.html
@@ -5,9 +5,9 @@
     <table class="resulttable">
         <thead>
         <th>&nbsp;</th>
-        <th><a ng-click="orderBy('title')" translate="SEARCH_RESULT_LIST_HEAD_RECIPE">Rezept<i class="material-icons">{{orderName('title')}}</i></a></th>
-        <th><a ng-click="orderBy('avgRating')" translate="SEARCH_RESULT_LIST_HEAD_RATING">Bewertung<i class="material-icons">{{orderName('avgRating')}}</i></a></th>
-        <th><a ng-click="orderBy('userName')" translate="SEARCH_RESULT_LIST_HEAD_AUTHOR">Author<i class="material-icons">{{orderName('userName')}}</i></a></th>
+        <th><a ng-click="orderBy('title')" translate="SEARCH_RESULT_LIST_HEAD_RECIPE">Rezept</a><i class="material-icons">{{orderName('title')}}</i></th>
+        <th><a ng-click="orderBy('avgRating')" translate="SEARCH_RESULT_LIST_HEAD_RATING">Bewertung</a><i class="material-icons">{{orderName('avgRating')}}</i></th>
+        <th><a ng-click="orderBy('userName')" translate="SEARCH_RESULT_LIST_HEAD_AUTHOR">Author</a><i class="material-icons">{{orderName('userName')}}</i></th>
         </thead>
         <tbody>
         <tr ng-repeat="recipe in (filteredLimitedRecipes = (filteredRecipes = (recipes | orderBy: recipeFilter.orderBy : recipeFilter.orderAsc   | SearchRecipeFilter: recipeFilter) | limitTo : maxRecipes : 0))">
