--- a/Server/public/js/directives/footer.tpl.html
+++ b/Server/public/js/directives/footer.tpl.html
@@ -2,24 +2,23 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="white-text">CAS FEE 2015</h5>
+                <h5 class="deep-orange-text">CAS-FEE 2015</h5>
                 <p class="grey-text text-lighten-4">Projekt 02 @ HSR Rapperswil </p>
+                <p class="grey-text text-lighten-1">Martin Brändli & Felix Adam</p>
+                <br/>
+                <br />
+                <p class="grey-text text-lighten-2">No © 2015 Copyright on Text & Menues</p>
             </div>
+
             <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
+                <h6 class="deep-orange-text"><i class="material-icons">build</i> &nbsp; Tools</h6>
                 <ul>
-                    <li><a class="grey-text text-lighten-3" href="#">Link 1</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#">Link 2</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#">Link 3</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#">Link 4</a></li>
+                    <li><a class="grey-text text-lighten-1" href="https://www.hsr.ch/"><i class="material-icons ">school</i> &nbsp; HSR Rapperswil</a></li>
+                    <li><a class="grey-text text-lighten-2" href="https://github.com/martinbraendli/cas-fee-p2"><i class="material-icons ">code</i> &nbsp;Fetty Bossy at Github</a></li>
+                     <li><a class="grey-text text-lighten-3" href="https://angularjs.org/"><i class="material-icons">code</i> Angular-JS</a></li>
+                    <li><a class="grey-text text-lighten-3" href="https://www.npmjs.com/"><i class="material-icons">code</i> Node-JS</a></li>
                 </ul>
             </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            No © 2015 Copyright Text & Menues
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
     </div>
 </footer>
