--- a/Server/public/js/directives/recipeTeaser.tpl.html
+++ b/Server/public/js/directives/recipeTeaser.tpl.html
@@ -1,6 +1,6 @@
 <div class="col s4">
-    <div class="card amber lighten-2">
-        <div class="card-title">{{teaserTitle | translate}}</div>
+    <div class="card white lighten-2">
+        <div class="card-title deep-orange-text">{{teaserTitle | translate}}</div>
         <br/>
 
         <div class="card-image">
