added missing lib

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="../Server/public/js/lib/angular.js"></script>
     <script type="text/javascript" src="../Server/public/js/lib/angular-animate.js"></script>
     <script type="text/javascript" src="../Server/public/js/lib/angular-route.js"></script>
+    <script type="text/javascript" src="../Server/public/js/lib/angular-translate.js"></script>
     <script type="text/javascript" src="../Server/public/js/lib/angular-toastr.tpls.js"></script>
     <script type="text/javascript" src="lib/angular-mocks.js"></script>
 
