--- a/Server/public/js/directives/footer.tpl.html
+++ b/Server/public/js/directives/footer.tpl.html
@@ -2,15 +2,14 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s6">
-                <h5 class="deep-orange-text">CAS-FEE</h5>
+                <h5 class="deep-orange-text">CAS-Front End Engineering</h5>
                 <p class="grey-text text-lighten-4">Projekt 02 @ HSR Rapperswil </p>
                 <p class="grey-text text-lighten-1">Martin Brändli & Felix Adam</p>
                 <br/>
-                <p class="grey-text text-lighten-2">No © 2015 Copyright on Text & Menues</p>
+                <p class="grey-text text-lighten-2">No &copy; 2015 Copyright on Text & Menues</p>
             </div>
-
             <div class="col l4 offset-l2 s4">
-                <h5 class="deep-orange-text"><i class="material-icons">build</i> &nbsp; 2015</h5>
+                <h5 class="deep-orange-text"><i class="material-icons">build</i> &nbsp;SPA built 2015</h5>
                 <ul>
                     <li><a class="grey-text text-lighten-1" href="https://www.hsr.ch/"><i class="material-icons ">school</i> &nbsp; HSR Rapperswil</a></li>
                     <li><a class="grey-text text-lighten-2" href="https://github.com/martinbraendli/cas-fee-p2"><i class="material-icons ">code</i> &nbsp;Fetty Bossy at Github</a></li>
